# PhantomScan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES_SUMMARY.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEMO_READY.md  DEPLOYMENT.md  Dockerfile.api  Dockerfile.app  Dockerfile.worker  EXTENSION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART_DEMO.md  README.md  SECURITY.md  UPGRADE_SUMMARY.md  docker-compose.yml  pyproject.toml  quickstart.sh  requirements.txt  verify_setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: radar_daily.yml
.streamlit/: secrets.toml.example
api/: __init__.py  main.py
config/: hallucinations.yml  policy.yml
data/feeds/2024-10-16/: case_pypi_requests2.md  feed.md  topN.json
data/feeds/2025-10-16/: feed.md  topN.json
data/feeds/2025-10-18/: feed.md  topN.json
data/samples/: device_procs.csv  npm_seed.jsonl  pypi_seed.jsonl
examples/casefiles/: npm_basics.json  pypi_basics.json
hunts/: radar_feed.csv
hunts/kql/: README.md  slopsquat_hunts.kql
hunts/splunk/: README.md  slopsquat_hunts.spl
phantom-dependency-radar/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
phantom-dependency-radar/config/: policy.yml
phantom-dependency-radar/data/samples/: device_procs.csv  npm_seed.jsonl  pypi_seed.jsonl
phantom-dependency-radar/radar/: __init__.py  storage.py  types.py  utils.py
phantom-dependency-radar/radar/pipeline/: __init__.py  fetch.py
phantom-dependency-radar/radar/scoring/: __init__.py  heuristics.py
phantom-dependency-radar/radar/sources/: __init__.py  base.py  npm.py  pypi.py
radar/: __init__.py  cli.py  storage.py  types.py  utils.py
radar/analysis/: __init__.py  npm_scripts.py  pypi_artifacts.py  readme_similarity.py
radar/corpus/: __init__.py  hallucinations.py
radar/enrich/: __init__.py  downloads.py  provenance.py  reputation.py  versions.py
radar/pipeline/: __init__.py  feed.py  fetch.py  score.py
radar/registry/: __init__.py  existence.py
radar/reports/: casefile.py
radar/reports/templates/: casefile.md.j2  feed.md.j2
radar/scoring/: __init__.py  heuristics.py
radar/sources/: __init__.py  base.py  npm.py  pypi.py
radar/suggestions/: __init__.py  alternatives.py
scripts/: demo_runner.py  export_feed_to_hunts.py
tests/: __init__.py  test_analysis_npm_scripts.py  test_analysis_pypi_artifacts.py  test_corpus_hallucinations.py  test_enrich_modules.py  test_heuristics.py  test_pipeline_end_to_end.py  test_sources_parsing.py  test_suggestions_alternatives.py
tests/analysis/: __init__.py  test_readme_similarity.py
tests/enrich/: __init__.py  test_dependents_hint.py  test_versions_pypi.py
tests/registry/: __init__.py  test_existence.py
tests/scoring/: __init__.py  test_maintainer_rep.py
webapp/: app.py  utils.py
webapp/pages/: 01_📈_Live_Feed.py  02_🔎_Candidate_Explorer.py  03_📄_Casefile_Generator.py  04_⚙️_Settings.py
