[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-dependency-radar"
version = "0.1.0"
description = "Slopsquatting monitor for PyPI and npm packages"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Security Team", email = "security@example.com"}
]
keywords = ["security", "supply-chain", "slopsquatting", "typosquatting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "rapidfuzz>=3.5.0",
    "feedparser>=6.0.10",
    "pendulum>=3.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "orjson>=3.9.10",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "streamlit>=1.29.0",
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "duckdb>=0.9.2",
    "pyarrow>=14.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.8",
    "black>=23.12.0",
    "mypy>=1.7.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "types-pyyaml>=6.0.12",
    "types-feedparser>=6.0.0",
    "pandas-stubs>=2.1.1",
]

[project.scripts]
radar = "radar.cli:app"

[tool.setuptools.packages.find]
include = ["radar*", "webapp*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PLE", "PLW", "RUF"]
ignore = ["E501", "ISC001"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["feedparser", "duckdb", "rapidfuzz"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=radar --cov-report=term-missing --cov-report=html"
